force-app/main/default/objects/Lead/fields/Adjuntos__c.field-meta.xml
<CustomField>
    <fullName>Adjuntos__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Campo que recibe la cantidad de adjuntos al objeto.</description>
    <inlineHelpText>Campo que recibe la cantidad de adjuntos al objeto.</inlineHelpText>
    <label>Adjuntos</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>