force-app/main/default/objects/Lead/fields/AFOG_reasignacionLleadsSARHA__c.field-meta.xml
<CustomField>
    <fullName>AFOG_reasignacionLleadsSARHA__c</fullName>
    <description>Inclusión Hora y Fecha de reasignación leads - SARHA</description>
    <label>reasignación leads - SARHA</label>
    <type>DateTime</type>
</CustomField>