force-app/main/default/objects/Lead/fields/Autoriza_tratamiento_de_datos_personales__c.field-meta.xml
<CustomField>
    <fullName>Autoriza_tratamiento_de_datos_personales__c</fullName>
    <label>Autoriza tratamiento de datos personales</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>