force-app/main/default/objects/Lead/fields/Autorizacion_Digital__c.field-meta.xml
<CustomField>
    <fullName>Autorizacion_Digital__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autorizacion Digital</label>
    <type>Checkbox</type>
</CustomField>