force-app/main/default/objects/Lead/fields/Cargo__c.field-meta.xml
<CustomField>
    <fullName>Cargo__c</fullName>
    <label>Cargo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gerente administrativo y Financiero</fullName>
            </value>
            <value>
                <fullName>Gerente de bienestar</fullName>
            </value>
            <value>
                <fullName>Gerente de compras</fullName>
            </value>
            <value>
                <fullName>Gerente de mercadeo</fullName>
            </value>
            <value>
                <fullName>Gerente de recursos humanos</fullName>
            </value>
            <value>
                <fullName>Gerente de ventas</fullName>
            </value>
            <value>
                <fullName>Jefe de compras</fullName>
            </value>
            <value>
                <fullName>Jefe de recursos humanos</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
            <value>
                <fullName>Pagador</fullName>
            </value>
            <value>
                <fullName>Propietario dueño de empresa</fullName>
            </value>
            <value>
                <fullName>Representante legal</fullName>
            </value>
            <value>
                <fullName>Gerente General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>