force-app/main/default/objects/Lead/fields/Categoria_Fuente_de_prospeccion__c.field-meta.xml
<CustomField>
    <fullName>Categoria_Fuente_de_prospeccion__c</fullName>
    <label>Subcategoría Fuente de prospección</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Playa de ventas</fullName>
            </value>
            <value>
                <fullName>Nuevos</fullName>
            </value>
            <value>
                <fullName>Colegios/Universidades</fullName>
            </value>
            <value>
                <fullName>Relacionamiento</fullName>
            </value>
            <value>
                <fullName>Sector económico</fullName>
            </value>
            <value>
                <fullName>Usados</fullName>
            </value>
            <value>
                <fullName>Cuña radio</fullName>
            </value>
            <value>
                <fullName>Comercial de T.V</fullName>
            </value>
            <value>
                <fullName>Valla</fullName>
            </value>
            <value>
                <fullName>Inserto prensa o revista</fullName>
            </value>
            <value>
                <fullName>Correo directo</fullName>
            </value>
            <value>
                <fullName>Volantes</fullName>
            </value>
            <value>
                <fullName>Directorio telefónico</fullName>
            </value>
            <value>
                <fullName>Página web</fullName>
            </value>
            <value>
                <fullName>Redes Sociales</fullName>
            </value>
            <value>
                <fullName>Sitios externos</fullName>
            </value>
            <value>
                <fullName>Aliados Financieros</fullName>
            </value>
            <value>
                <fullName>Ferias</fullName>
            </value>
            <value>
                <fullName>Salud</fullName>
            </value>
            <value>
                <fullName>Línea 470</fullName>
            </value>
            <value>
                <fullName>Honda Motos</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
            <value>
                <fullName>Seguros</fullName>
            </value>
            <value>
                <fullName>Bancos</fullName>
            </value>
            <value>
                <fullName>Centros Comerciales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>