force-app/main/default/objects/Lead/fields/Comentarios_adicionales__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_adicionales__c</fullName>
    <label>Comentarios adicionales</label>
    <length>255</length>
    <type>Text</type>
</CustomField>