force-app/main/default/objects/Lead/fields/Convertidor__c.field-meta.xml
<CustomField>
    <fullName>Convertidor__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Convertidor</label>
    <type>Checkbox</type>
</CustomField>