force-app/main/default/objects/Lead/fields/Datos_Autorizacion_Web__c.field-meta.xml
<CustomField>
    <fullName>Datos_Autorizacion_Web__c</fullName>
    <description>Para guardar la evidendia de la respuesta del ciente y que desde Fanalca se pueda visualizar la respuesta del cliente</description>
    <label>Evidencia Autorización Habeas Data</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>