force-app/main/default/objects/Lead/fields/Desea_recibir_correo_electronico__c.field-meta.xml
<CustomField>
    <fullName>Desea_recibir_correo_electronico__c</fullName>
    <label>¿Desea recibir correo electrónico?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>