force-app/main/default/objects/Lead/fields/Desea_recibir_informaci_n_al_movil__c.field-meta.xml
<CustomField>
    <fullName>Desea_recibir_informaci_n_al_movil__c</fullName>
    <label>Desea recibir información al movil?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>