force-app/main/default/objects/Lead/fields/Detalle_de_categoria__c.field-meta.xml
<CustomField>
    <fullName>Detalle_de_categoria__c</fullName>
    <inlineHelpText>Amplíe el detalle de la categoría fuente de prospección ej, actividad en colegio ABC</inlineHelpText>
    <label>Detalle de categoría fuente prospección</label>
    <length>255</length>
    <type>Text</type>
</CustomField>