force-app/main/default/objects/Lead/fields/Distribuci_n__c.field-meta.xml
<CustomField>
    <fullName>Distribuci_n__c</fullName>
    <label>Distribución</label>
    <length>25</length>
    <type>Text</type>
</CustomField>