force-app/main/default/objects/Lead/fields/Estado_de_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_Cuenta__c</fullName>
    <label>Estado de Cuenta</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Activo</fullName>
                <default>true</default>
                <label>Activo</label>
            </value>
            <value>
                <fullName>Inactivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>