force-app/main/default/objects/Lead/fields/Extensi_n_telef_nica__c.field-meta.xml
<CustomField>
    <fullName>Extensi_n_telef_nica__c</fullName>
    <label>Extensión telefónica</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>