force-app/main/default/objects/Lead/fields/Fecha_estimada_de_compra__c.field-meta.xml
<CustomField>
    <fullName>Fecha_estimada_de_compra__c</fullName>
    <label>Fecha estimada de compra</label>
    <type>Date</type>
</CustomField>