force-app/main/default/objects/Lead/fields/Fecha_ultimo_contacto__c.field-meta.xml
<CustomField>
    <fullName>Fecha_ultimo_contacto__c</fullName>
    <label>Fecha último contacto</label>
    <type>Date</type>
</CustomField>