force-app/main/default/objects/Lead/fields/Forma_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_pago__c</fullName>
    <label>Forma de pago</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contado</fullName>
            </value>
            <value>
                <fullName>Credito / Leasing</fullName>
            </value>
            <value>
                <fullName>Renting</fullName>
            </value>
            <value>
                <fullName>Contado + Retoma</fullName>
            </value>
            <value>
                <fullName>Crédito / Leasing + Contado</fullName>
            </value>
            <value>
                <fullName>Crédito / Leasing + Retoma</fullName>
            </value>
            <value>
                <fullName>Contado + Crédito + Retoma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>