force-app/main/default/objects/Lead/fields/IdsDeAdjuntos__c.field-meta.xml
<CustomField>
    <fullName>IdsDeAdjuntos__c</fullName>
    <description>Este campo lo administra el flow de cargar archivos para almacenar los IDs de los registros de adjuntos asociados.</description>
    <label>IdsDeAdjuntos</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>