force-app/main/default/objects/Lead/fields/Info_Adi_Vehiculo_de_interes__c.field-meta.xml
<CustomField>
    <fullName>Info_Adi_Vehiculo_de_interes__c</fullName>
    <label>Info. Adi. Vehículo de interés</label>
    <length>255</length>
    <type>Text</type>
</CustomField>