force-app/main/default/objects/Lead/fields/Movil_referidor__c.field-meta.xml
<CustomField>
    <fullName>Movil_referidor__c</fullName>
    <formula>IF( Referidor_Cuenta__c &lt;&gt; null,   Referidor_Cuenta__r.Phone, IF( Referidor_Lead__c &lt;&gt; null,   Referidor_Lead__r.MobilePhone  , null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Móvil referidor</label>
    <type>Text</type>
</CustomField>