force-app/main/default/objects/Lead/fields/Nivel_de_interes__c.field-meta.xml
<CustomField>
    <fullName>Nivel_de_interes__c</fullName>
    <label>Nivel de interés</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Alto</fullName>
            </value>
            <value>
                <fullName>Medio</fullName>
            </value>
            <value>
                <fullName>Bajo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>