force-app/main/default/objects/Lead/fields/Nmero_de_documento__c.field-meta.xml
<CustomField>
    <fullName>Nmero_de_documento__c</fullName>
    <label>Número de documento</label>
    <length>11</length>
    <type>Text</type>
</CustomField>