force-app/main/default/objects/Lead/fields/No_recibir_correo_electronico_Referidor__c.field-meta.xml
<CustomField>
    <fullName>No_recibir_correo_electronico_Referidor__c</fullName>
    <formula>IF( Referidor_Cuenta__c &lt;&gt; null,    TEXT(Referidor_Cuenta__r.Desea_recibir_Correo_Electronico__c), 
IF( Referidor_Lead__c &lt;&gt; null,    TEXT(Referidor_Lead__r.Desea_recibir_correo_electronico__c), &quot;No&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No recibir correo electrónico Referidor</label>
    <type>Text</type>
</CustomField>