force-app/main/default/objects/Lead/fields/Notas__c.field-meta.xml
<CustomField>
    <fullName>Notas__c</fullName>
    <label>Notas</label>
    <type>TextArea</type>
</CustomField>