force-app/main/default/objects/Lead/fields/Numero_de_identificacion_referidor__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_identificacion_referidor__c</fullName>
    <formula>IF( Referidor_Cuenta__c &lt;&gt; null,  Referidor_Cuenta__r.AM_Numero_de_documento__c , IF( Referidor_Lead__c &lt;&gt; null,  Referidor_Lead__r.Nmero_de_documento__c , &quot;No ha seleccionado Referidor&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número de documento referidor</label>
    <type>Text</type>
</CustomField>