force-app/main/default/objects/Lead/fields/Organizacion_de_ventas__c.field-meta.xml
<CustomField>
    <fullName>Organizacion_de_ventas__c</fullName>
    <formula>TEXT(Owner:User.AM_Concesionario__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organización de ventas</label>
    <type>Text</type>
</CustomField>