force-app/main/default/objects/Lead/fields/Permiso_de_contacto__c.field-meta.xml
<CustomField>
    <fullName>Permiso_de_contacto__c</fullName>
    <label>Permiso de contacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Autorizado</fullName>
            </value>
            <value>
                <fullName>No autorizado</fullName>
                <default>true</default>
                <label>No autorizado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>