force-app/main/default/objects/Lead/fields/Producto_de_inter_s_Motos__c.field-meta.xml
<CustomField>
    <fullName>Producto_de_inter_s_Motos__c</fullName>
    <label>Producto de interes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Producto_de_Interes</valueSetName>
    </valueSet>
</CustomField>