force-app/main/default/objects/Lead/fields/prueba_texto__c.field-meta.xml
<CustomField>
    <fullName>prueba_texto__c</fullName>
    <label>prueba texto</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>