force-app/main/default/objects/Lead/fields/Quiero_Financiar__c.field-meta.xml
<CustomField>
    <fullName>Quiero_Financiar__c</fullName>
    <label>Quiero Financiar?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>