force-app/main/default/objects/Lead/fields/Razon_de_no_Interes__c.field-meta.xml
<CustomField>
    <fullName>Razon_de_no_Interes__c</fullName>
    <label>Razón de no Interés</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>No interesado</fullName>
            </value>
            <value>
                <fullName>No contactable</fullName>
            </value>
            <value>
                <fullName>Número equivocado</fullName>
            </value>
            <value>
                <fullName>No interesado por precio</fullName>
            </value>
            <value>
                <fullName>No interesado por diseño</fullName>
            </value>
            <value>
                <fullName>No interesado por servicio</fullName>
            </value>
            <value>
                <fullName>No interesado por marca</fullName>
            </value>
            <value>
                <fullName>No interesado por capacidad de pago</fullName>
            </value>
            <value>
                <fullName>Desea comprar en otro momento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>