force-app/main/default/objects/Lead/fields/Referidor_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Referidor_Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>ingrese los datos del referidor si es una cuenta creada en SARHA</inlineHelpText>
    <label>Referidor Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referencias</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>