force-app/main/default/objects/Lead/fields/Referidor_Lead__c.field-meta.xml
<CustomField>
    <fullName>Referidor_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>ingrese los datos del referidor si no es una cuenta creada en SARHA</inlineHelpText>
    <label>Referidor Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Referencias</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>