force-app/main/default/objects/Lead/fields/Registro_activo__c.field-meta.xml
<CustomField>
    <fullName>Registro_activo__c</fullName>
    <label>Registro activo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>