force-app/main/default/objects/Lead/fields/Segundo_apellido__c.field-meta.xml
<CustomField>
    <fullName>Segundo_apellido__c</fullName>
    <label>Segundo apellido</label>
    <length>25</length>
    <type>Text</type>
</CustomField>