force-app/main/default/objects/Lead/fields/Sucursal_persona_natural__c.field-meta.xml
<CustomField>
    <fullName>Sucursal_persona_natural__c</fullName>
    <formula>IF( RecordType.Name = &quot;Persona Natural Autos&quot;, &quot;001&quot;, &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sucursal persona natural</label>
    <type>Text</type>
</CustomField>