force-app/main/default/objects/Lead/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cliente</fullName>
            </value>
            <value>
                <fullName>Prospecto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>