force-app/main/default/objects/Lead/fields/Tipo_de_oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_oportunidad__c</fullName>
    <label>Tipo de oportunidad</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nuevos</fullName>
            </value>
            <value>
                <fullName>Usados</fullName>
            </value>
            <value>
                <fullName>Renting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>