force-app/main/default/objects/Lead/fields/Ultima_fecha_de_contacto__c.field-meta.xml
<CustomField>
    <fullName>Ultima_fecha_de_contacto__c</fullName>
    <label>Última fecha de contacto</label>
    <type>Date</type>
</CustomField>