force-app/main/default/objects/Lead/fields/Ultimo_comentario__c.field-meta.xml
<CustomField>
    <fullName>Ultimo_comentario__c</fullName>
    <label>Ultimo comentario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>