force-app/main/default/objects/Lead/fields/URL_de_documento_adjunto__c.field-meta.xml
<CustomField>
    <fullName>URL_de_documento_adjunto__c</fullName>
    <description>URL de documento adjunto</description>
    <inlineHelpText>Ingresar la URL con la ubicación del documento.</inlineHelpText>
    <label>URL de documento adjunto</label>
    <type>Url</type>
</CustomField>