force-app/main/default/objects/Lead/fields/Vehiculo_de_interes__c.field-meta.xml
<CustomField>
    <fullName>Vehiculo_de_interes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehículo de interés</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.Tipo_Producto__c</field>
            <operation>contains</operation>
            <valueField>$Source.Tipo_de_oportunidad__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>