force-app/main/default/objects/Lead/fields/Vitrina__c.field-meta.xml
<CustomField>
    <fullName>Vitrina__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vitrina</label>
    <referenceTo>Concesionario__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>