force-app/main/default/objects/Lead/recordTypes/Persona_Juridica_Autos.recordType-meta.xml
<RecordType>
    <fullName>Persona_Juridica_Autos</fullName>
    <active>true</active>
    <businessProcess>Persona Juridica Autos</businessProcess>
    <label>Persona Juridica Autos</label>
</RecordType>