force-app/main/default/objects/Lead/recordTypes/Persona_Juridica_Motos.recordType-meta.xml
<RecordType>
    <fullName>Persona_Juridica_Motos</fullName>
    <active>true</active>
    <businessProcess>Persona Juridica Motos</businessProcess>
    <description>Record Type Persona Juridica Motos</description>
    <label>Persona Juridica Motos</label>
</RecordType>