force-app/main/default/objects/Lead/recordTypes/Persona_Natural_Autos.recordType-meta.xml
<RecordType>
    <fullName>Persona_Natural_Autos</fullName>
    <active>true</active>
    <businessProcess>Persona Natural Autos</businessProcess>
    <label>Persona Natural Autos</label>
</RecordType>