force-app/main/default/objects/Lead/recordTypes/Persona_Natural_Motos.recordType-meta.xml
<RecordType>
    <fullName>Persona_Natural_Motos</fullName>
    <active>true</active>
    <businessProcess>Persona Natural Motos</businessProcess>
    <description>Record Type Persona Natural Motos</description>
    <label>Persona Natural Motos</label>
</RecordType>