force-app/main/default/objects/Lead/validationRules/Valida_al_crear_camposcontacto.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_al_crear_camposcontacto</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Email), ISBLANK(MobilePhone))</errorConditionFormula>
    <errorMessage>Debe ingresar un medio de contacto, celular o email.</errorMessage>
</ValidationRule>