force-app/main/default/objects/Lead/validationRules/Valida_Campos_PJConversion_Motos.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Campos_PJConversion_Motos</fullName>
    <active>true</active>
    <description>Se encarga de validar campos obligatorios de Persona jurídica, impidiendo la conversión si faltase algún campo.</description>
    <errorConditionFormula>AND( RecordType.Name == &quot;Persona Juridica Motos&quot;, TEXT(Status)==&quot;Convertido&quot;,OR(   Phone == null,  Text(Producto_de_inter_s_Motos__c) == null, TEXT(Tipo_de_documento__c)==null, Nmero_de_documento__c ==null ))</errorConditionFormula>
    <errorMessage>Favor verificar que los siguientes campos estén diligenciados: Teléfono, Tipo de documento, Número de documento y Producto de interés.</errorMessage>
</ValidationRule>